css/project1.css
body, html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    }

body {
    font-family: Roboto;
    font-size: 12px;
    color: #424242;
}

h1, h2, h3, h4, h5 {
    margin: 0;
}

h1 {
    font-size: 40px;
    font-weight: lighter;
}

h2 {
    font-size: 20px;
    font-weight: lighter;
}

h3 {
    font-size: 14px;
    font-weight: lighter;
}

p {
    font-weight: lighter;
}

header {
    font-family: Roboto;
    color: #2d3c49;
    width: 80%;
    text-align: right;
    margin: 3% 10%;
    text-transform: uppercase;
    display: flex;
}

hr {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    height: 2px;
    background-color: #7d97ad;
}

img {
    margin-top: 20px;
}

a, a:visited {
    color: inherit;
}

.name {
    width: 80%;
}

.logo {
    min-width: 200px;
    width: 20%;
    float: left;
}

.featured {
    font-family: Roboto;
    color: #2d3c49;
    width: 80%;
    text-align: left;
    margin: 3% 10%;
}

.featured_title {
    font-size: 30px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.course_title {
    margin-top: 20px;
    margin-bottom: 10px;
    font-weight: normal;
}

.course_section {
    display: flex;
    flex-wrap: wrap;
}

.course {
    display: flex;
    flex-direction: column;
    padding: 0.5% 0.5%;
    box-sizing:border-box;
}

.course_image {
    width: 95%;
    margin-top: 0px;
}

.project_title {
    margin-top: 5px;
    margin-bottom: 3px;
}

.footer {
    max-width: 80%;
    margin: 3% 10%;
}

@media screen and (max-width: 500px) {
    .header {
        flex-direction: column;
    }

    .logo {
        float: right;
        width: 100%;
    }

    .course {
        width: 100%;
    }

    .course_section {
        width: 100%;
    }

    .course_image {
        width: 100%;
    }

    .name {
        width: 100%;
    }
}

@media screen and (min-width: 501px) {
    .course {
        width: 33%;
    }
}

@media screen and (min-width: 1000px) {
    .course {
        width: 20%;
    }
}

@media screen and (min-width: 1500px) {
    body {
        max-width: 1500px;
    }
}

